Added the first route controller

--- a/client/views/layouts/Homepage/Homepage.html
+++ b/client/views/layouts/Homepage/Homepage.html
@@ -1,3 +1,14 @@
 <template name="Homepage">
-  THIS IS THE HOMEPAGE
+    THIS IS THE HOMEPAGE
+    <div>These are users:</div>
+    <ul>
+        {{#each usersKED}}
+        <li>
+            <div>
+                {{name}}  {{surname}}
+            </div>
+        </li>
+        {{/each}}
+    </ul>
+
 </template>
