Buttons added to homepage

--- a/client/views/layouts/Homepage/Homepage.html
+++ b/client/views/layouts/Homepage/Homepage.html
@@ -1,4 +1,13 @@
 <template name="Homepage">
+    <div>
+    <button style="height:75px; width:200px; background-color:red" type="button">HELP!</button>
+    </div>
+    <div>
+    <button style="height:75px; width:200px; background-color:orange" type="button">WARNING!</button>
+    </div>
+    <div>
+    <button style="height:75px; width:200px; background-color:green" type="button">PREVIOUS POSTS</button>
+    </div>
     THIS IS THE HOMEPAGE
     <div>These are users:</div>
     <ul>
