--- a/client/views/layouts/master-layout/master_layout.html
+++ b/client/views/layouts/master-layout/master_layout.html
@@ -3,7 +3,7 @@
         <div class="login">
             {{>loginButtons}}
             {{#if currentUser}}
-                PIERRE FERREIRA #37 VERONICA
+                <div>PIERRE FERREIRA</div> <div>#37 VERONICA</div>
             {{else}}
                 NOT LOGGED IN
             {{/if}}
