Speech bubbles added to chat

--- a/client/views/layouts/Homepage/Homepage.html
+++ b/client/views/layouts/Homepage/Homepage.html
@@ -1,6 +1,6 @@
 <template name="Homepage">
     <div>
-        <a class="btn btn-help btn-block btn-dynamic-props "  href="/help-confirm">HELP!</a>
+        <a class="btn btn-help btn-block btn-dynamic-props "  href="/help_confirm">HELP!</a>
     </div>
     <div>
         <a class="btn btn-warning btn-block btn-dynamic-props "  href="">WARNING!</a>
@@ -12,7 +12,7 @@
     <div>
         <a href="AppUse">How to use this app.</a>
     </div>
-    <div>
-        <a href="">2014 TEKTITEse</a>
-    </div>
+<div id="footer">
+Copyright © TektiteSE.biz
+</div>
 </template>
