--- a/client/views/layouts/help_confirm/help_confirm.html
+++ b/client/views/layouts/help_confirm/help_confirm.html
@@ -22,8 +22,6 @@
                         Whomever else is subscribed to the KRF alert system.
                     </li>
                 </ul> 
-                        <a class="btn btn-help btn-block btn-dynamic-props "  href="/help-chat-main">YES HELP!</a>         <a class="btn btn-cancel btn-block btn-dynamic-props "  href="/">CANCEL</a>
+                        <a class="btn btn-help btn-block btn-dynamic-props "  href="/help_chat_main">YES HELP!</a>         <a class="btn btn-cancel btn-block btn-dynamic-props "  href="/">CANCEL</a>
             </div>
-            
-        
 </template>
