--- a/client/views/layouts/master_layout/master_layout.html
+++ b/client/views/layouts/master_layout/master_layout.html
@@ -3,7 +3,7 @@
         <div class="login">
             {{>loginButtons}}
             {{#if currentUser}}
-                <div>PIERRE FERREIRA</div> <div>#37 VERONICA</div>
+                <div>{{name}} PIERRE FERREIRA @ #37 VERONICA</div>
             {{else}}
                 NOT LOGGED IN
             {{/if}}
