--- a/client/views/layouts/help_confirm/help_confirm.html
+++ b/client/views/layouts/help_confirm/help_confirm.html
@@ -1,7 +1,7 @@
 <template name="help_confirm">
         
             <h4>
-                    ARE YOU SURE YOU WANT TO SEND A HELP SIGNAL?
+                <div class="alert alert-danger" role="alert">ARE YOU SURE YOU WANT TO SEND A HELP SIGNAL?</div>
             </h4>
             <div>
                 If you confirm help sms's will be sent to: 
