--- a/client/views/layouts/help_chat_main/help_chat_main.css
+++ b/client/views/layouts/help_chat_main/help_chat_main.css
@@ -1,117 +1,224 @@
-.bubbleRight
-{
-position: relative;
-text-align: left;
-width: 300px;
-padding: 0px;
-background: #ACFFFF;
--webkit-border-radius: 10px;
--moz-border-radius: 10px;
-border-radius: 10px;
-border: #009DFF solid 2px;
+body{
+    height:400px;
+    position: relative;
+    bottom: 0;
+}
+.col-md-2, .col-md-10{
+    padding:0;
+}
+.panel{
+    margin-bottom: 0px;
+}
+.chat-window{
+    bottom:'';
+    position:relative;
+    float:'';
+    margin-left:1px;
+    width: 350px;
+}
+.chat-window > div > .panel{
+    border-radius: 5px 5px 0 0;
+}
+.icon_minim{
+    padding:2px 10px;
+}
+.msg_container_base{
+  background: lightyellow;
+  margin: 0;
+  padding: 0 10px 10px;
+  max-height:300px;
+  height: 200px;
+  overflow-x:hidden;
+}
+.top-bar {
+  text-align: center;
+  background: #666;
+  color: white;
+  padding: 1px;
+  position: relative;
+  overflow: hidden;
+}
+.msg_initiator{
+    padding-left: 5px !important;
+    margin-left:20px;
+    padding-bottom:1px  !important;
+}
+.msg_responder{
+    margin-right:1px;
+    padding-bottom:1px !important;  
+}
+.messageBubbleLeft {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+/*   max-width:100%;*/
+    max-width:300px;
+    position: relative;
+    width: '';
+    padding: 2px;
+    background: #FF0000;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: #984400 solid 2px;
+    color: white;
 }
 
-.bubbleRight:after 
+.messageBubbleLeft:after 
 {
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 3px 0 3px 10px;
-border-color: transparent #ACFFFF;
-display: block;
-width: 0;
-z-index: 1;
-margin-top: -7px;
-right: -9px;
-top: 60%;
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 3px 10px 3px 0;
+    border-color: transparent #FF0000;
+    display: block;
+    width: 0;
+    z-index: 1;
+    margin-top: -7px;
+    left: -9px;
+    top: 60%;
 }
 
-.bubbleRight:before 
+.messageBubbleLeft:before 
 {
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 4px 0 4px 11px;
-border-color: transparent #009DFF;
-display: block;
-width: 0;
-z-index: 0;
-margin-top: -8px;
-right: -12px;
-top: 60%;
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 4px 11px 4px 0;
+    border-color: transparent #984400;
+    display: block;
+    width: 0;
+    z-index: 0;
+    margin-top: -8px;
+    left: -12px;
+    top: 60%;
+}
+.messageBubbleLeft > p {
+    font-size: 18px;
+    margin: 0 0 0.2rem 0;
+  }
+.messageBubbleLeft > metaPost {
+    font-size: 11px;
+    color: #FFFFFF;
 }
 
-.bubbleLeft
+.messageBubbleRight {
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
+ /*   max-width:100%;*/
+    max-width:300px;
+    position: relative;
+    float: right;
+    text-align: left;
+    width: '';
+    padding: 2px;
+    background: #ACFFFF;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border: #009DFF solid 2px;
+}
+.messageBubbleRight:after 
 {
-position: relative;
-width: 300px;
-padding: 0px;
-background: #FF0000;
--webkit-border-radius: 10px;
--moz-border-radius: 10px;
-border-radius: 10px;
-border: #984400 solid 2px;
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 3px 0 3px 10px;
+    border-color: transparent #ACFFFF;
+    display: block;
+    width: 0;
+    z-index: 1;
+    margin-top: -7px;
+    right: -9px;
+    top: 60%;
 }
 
-.bubbleLeft:after 
+.messageBubbleRight:before 
 {
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 3px 10px 3px 0;
-border-color: transparent #FF0000;
-display: block;
-width: 0;
-z-index: 1;
-margin-top: -7px;
-left: -9px;
-top: 60%;
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 4px 0 4px 11px;
+    border-color: transparent #009DFF;
+    display: block;
+    width: 0;
+    z-index: 0;
+    margin-top: -8px;
+    right: -12px;
+    top: 60%;
+}
+.messageBubbleRight > p {
+    font-size: 18px;
+    margin: 0 0 0.01rem 0;
+  }
+.messageBubbleRight > metaPost {
+    font-size: 10px;
+    color: #000000;
+    float: right;
+}
+.msg_container {
+    padding: 10px;
+    overflow: hidden;
+    display: flex;
+}
+img {
+    display: block;
+    width: 100%;
+}
+.avatar {
+    position: relative;
+}
+.base_initiator > .avatar:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border: 5px solid #FFF;
+    border-left-color: rgba(0, 0, 0, 0);
+    border-bottom-color: rgba(0, 0, 0, 0);
 }
 
-.bubbleLeft:before 
-{
-content: '';
-position: absolute;
-border-style: solid;
-border-width: 4px 11px 4px 0;
-border-color: transparent #984400;
-display: block;
-width: 0;
-z-index: 0;
-margin-top: -8px;
-left: -12px;
-top: 60%;
+.base_responder {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.base_responder > .avatar:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border: 5px solid white;
+    border-right-color: transparent;
+    border-top-color: transparent;
+    box-shadow: 1px 1px 2px rgba(black, 0.2);
 }
 
-.txtLeftAlign
+
+
+
+
+.msg_container_base::-webkit-scrollbar-track
 {
-text-align:left;
-margin-top:1px;
-margin-bottom:0px;
-padding:0px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
 }
-.txtRightAlign
+
+.msg_container_base::-webkit-scrollbar
 {
-text-align:right;
-margin-top:1px;
-margin-bottom:0px;
-padding:0px;
+    width: 20px;
+    background-color: #F5F5F5;
 }
-.postInfo
+
+.msg_container_base::-webkit-scrollbar-thumb
 {
-font-size: 11px;
-margin-top:2px;
-margin-bottom:-5px;
-padding:0px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
 }
-.chatBox
-{
-width: 350px; 
-height: 200px;
-overflow-y: scroll;
-padding: 20px; 
-padding-top: 0px;
-border-style: solid; 
-margin-top:1px;
-margin-bottom:1px;
+
+.btn-group.dropup{
+    position:fixed;
+    left:0px;
+    bottom:0;
 }
+
