After chat was linked to initiator user's profile

--- a/client/views/layouts/alert_buttons/alert_buttons.html
+++ b/client/views/layouts/alert_buttons/alert_buttons.html
@@ -1,6 +1,6 @@
 <template name="alert_buttons">
     <div>
-        <a class="btn btn-help btn-block btn-dynamic-props "  href="/help_confirm">HELP!</a>
+        <a class="btn btn-help btn-block btn-dynamic-props" id="helpButton"  href="/help_confirm">HELP!</a>
     </div>
     <div>
         <a class="btn btn-warning btn-block btn-dynamic-props "  href="">WARNING!</a>
