--- a/client/views/layouts/users_profile/users_profile.html
+++ b/client/views/layouts/users_profile/users_profile.html
@@ -7,9 +7,12 @@
         <form class="" role="form">
             <div class="row">
                 <div>
+                    <h4 for="" class="control-label">All fields are compulsory.</h4>
+                </div>    
+                <div>
                     <label for="" class="control-label">Address:</label>
-                    <input type="text" class="form-control input-small" placeholder="No...">
-                    <select>
+                    <input type="text" class="form-control input-small" id="houseNo" placeholder="No...">
+                    <select id="streetName">
                       <option value="">Street Name...</option>
                       <option value="Topaz">Topaz</option>
                       <option value="Marble">Marble</option>
@@ -18,34 +21,60 @@
                        <option value="Silver">Silver</option> 
                     </select>
                 </div>
+                 <div class="validCheck alert alert-danger" style="width:250px; display: none;" role="alert" id="addressValid" >
+                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                     Please enter all address information.
+                </div>
                 <div class="input-group">
                     <label for="" class="control-label">Name:</label>        
-                    <input type="text" class="form-control input-medium" placeholder="Name...">
+                    <input type="text" class="form-control input-medium" id="userName" placeholder="Name...">
+                    <div class="validCheck alert alert-danger" style="width:200px; display: none;" role="alert" id="userNameValid" >
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        Please enter name.
+                    </div>
                 </div>
                 <div class="input-group">
                     <label for="" class="control-label">Surname:</label>
-                    <input type="text" class="form-control input-medium" placeholder="Surname...">
+                    <input type="text" class="form-control input-medium" id="userSurname" placeholder="Surname...">
+                    <div class="validCheck alert alert-danger" style="width:200px; display: none; " role="alert" id="userSurnameValid" >
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        Please enter surname.
+                    </div>
                 </div>
                 <div class="input-group">
                     <label for="" class="control-label">Cell phone:</label>
-                    <input type="text" class="form-control" placeholder="Cell No...">
+                    <input type="text" class="form-control" id="cellNo" placeholder="Cell No...">
+                    <div class="validCheck alert alert-danger" style="width:200px; display: none; " role="alert" id="cellNoValid" >
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        Please enter cell no.
+                    </div>
                 </div>
-                <div class="input-group">
-                    <label for="" class="control-label">Gender:</label>
-                    <select>
-                      <option value="">Gender...</option>
-                      <option value="Topaz">Male</option>
-                      <option value="Marble">Female</option>
-                    </select>
-                </div>    
-                 <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> Receive all alerts via SMS (R50/mth).  
-                    </label>
-                  </div>
-                <button class="btn btn-lg btn-primary" type="submit">Update my profile</button>
+                
+                <label class="control-label">Gender:</label>
+                <select id="gender">
+                  <option value="">Gender...</option>
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                </select>
+                <div class="validCheck alert alert-danger" style="width:200px; display: none; " role="alert" id="genderValid" >
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    Please enter gender.
+                </div>
+                 <div class="input-group">
+                     <div class="checkbox">
+                        <label>
+                          <input type="checkbox" id="smsSubscriber" checked="true"> Receive all help alerts via SMS (R50/mth).  
+                        </label>
+                      </div>
+                 </div>     
+                <div><button class="btn btn-lg btn-primary" type="submit">Update my profile</button></div>
+                <div class="validCheck alert alert-danger" style="width:200px; display: none;" role="alert" id="messageValid" >
+                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    ERRORS ON PAGE! - Please rectify.
+                </div>
             </div>
         </form>
+        <a>(REPORT AN ISSUE)</a>
     </div>
  </div>    
 </template>
