After chatlist template created and working

--- a/client/views/layouts/alert_buttons/alert_buttons.html
+++ b/client/views/layouts/alert_buttons/alert_buttons.html
@@ -1,12 +1,12 @@
 <template name="alert_buttons">
     <div>
-        <a class="btn btn-help btn-block btn-dynamic-props" id="helpButton"  href="/help_confirm">HELP!</a>
+        <a class="btn btn-help btn-block btn-dynamic-props"  href="/help_confirm">HELP!</a>
     </div>
     <div>
-        <a class="btn btn-warning btn-block btn-dynamic-props "  href="">WARNING!</a>
+        <a class="btn btn-warning btn-block btn-dynamic-props "  href="/chat_active_list">ACTIVE CHATS</a>
     </div>
     <div>
-        <a class="btn btn-prevpost btn-block btn-dynamic-props "  href="">PREVIOUS POSTS</a>
+        <a class="btn btn-prevpost btn-block btn-dynamic-props "  href="">PREVIOUS CHATS</a>
     </div>
     <div>
         <h3><a href="/users_profile">USERS PROFILE.</a></h3>
