--- a/client/views/layouts/help_chat_main/help_chat_main.html
+++ b/client/views/layouts/help_chat_main/help_chat_main.html
@@ -6,7 +6,7 @@
                 <div class="panel-heading top-bar">
                     <div class="col-md-8 col-xs-8">
                         <h3 class="panel-title"><span class="glyphicon glyphicon-comment"></span> <h3><a href="/">BACK TO ALERT BUTTONS</a></h3></h3>
-                        <h1>CHAT #{{postID}} devel</h1>
+                        <h1>CHAT #{{postID}}</h1>
                     </div>
                     <div class="col-md-4 col-xs-4" style="text-align: right;">
                         <a href="#"><span id="minim_chat_window" class="glyphicon glyphicon-minus icon_minim"></span></a>
@@ -15,24 +15,24 @@
                 </div>
                 <div class="panel-body msg_container_base">
                 {{#each posts}}
-                {{#if initiatorPost}}    
-                    <div class="row msg_container base_initiator">
-                        <div class="col-md-10 col-xs-10">
-                            <div class="messageBubbleLeft msg_initiator">
-                                <p> {{postMessage}}</p>
-                                <metaPost>{{postMetaStr}}</metaPost>
+                    {{#if initiatorPost}}    
+                        <div class="row msg_container base_initiator">
+                            <div class="col-md-10 col-xs-10">
+                                <div class="messageBubbleLeft msg_initiator">
+                                    <p> {{postMessage}}</p>
+                                    <metaPost>{{postMetaStr}}</metaPost>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                {{else}}
-                    <div class="row msg_container base_responder">
-                        <div class="col-md-10 col-xs-10">
-                            <div class="messageBubbleRight msg_responder">
-                                <p> {{postMessage}}</p>
-                                <metaPost>{{postMetaStr}}</metaPost>
+                    {{else}}
+                        <div class="row msg_container base_responder">
+                            <div class="col-md-10 col-xs-10">
+                                <div class="messageBubbleRight msg_responder">
+                                    <p> {{postMessage}}</p>
+                                    <metaPost>{{postMetaStr}}</metaPost>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     {{/if}}
                 {{/each}}
                 </div>
