Lots of small layout changes

--- a/client/views/layouts/alert_buttons/alert_buttons.html
+++ b/client/views/layouts/alert_buttons/alert_buttons.html
@@ -6,7 +6,7 @@
         <a class="btn btn-warning btn-block btn-dynamic-props "  href="/chat_active_list">ACTIVE CHATS</a>
     </div>
     <div>
-        <a class="btn btn-prevpost btn-block btn-dynamic-props "  href="">PREVIOUS CHATS</a>
+        <a class="btn btn-prevpost btn-block btn-dynamic-props "  href="">OLD CHATS</a>
     </div>
     <div>
         <h3><a href="/users_profile">USERS PROFILE.</a></h3>
