--- a/client/views/layouts/help_chat_main/help_chat_main.html
+++ b/client/views/layouts/help_chat_main/help_chat_main.html
@@ -1,11 +1,10 @@
 <template name='help_chat_main'>    
-<div class="container">
+<div class="container container-fluid">
     <div class="row chat-window col-xs-5 col-md-3" id="chat_window_1" style="margin-left:0px;">
         <div class="col-xs-12 col-md-12">
         	<div class="panel panel-default">
                 <div class="panel-heading top-bar">
-                    <div class="col-md-8 col-xs-8">
-                        <h3 class="panel-title"><span class="glyphicon glyphicon-comment"></span> <h3><a href="/">BACK TO ALERT BUTTONS</a></h3></h3>
+                    <div class="col-md-8 col-xs-8">    
                         <h1>CHAT #{{postID}}</h1>
                     </div>
                     <div class="col-md-4 col-xs-4" style="text-align: right;">
@@ -20,7 +19,7 @@
                             <div class="col-md-10 col-xs-10">
                                 <div class="messageBubbleLeft msg_initiator">
                                     <p> {{postMessage}}</p>
-                                    <metaPost>{{postMetaStr}}</metaPost>
+                                    <metaPost style="font-size:'';">{{postMetaStr}}</metaPost>
                                 </div>
                             </div>
                         </div>
@@ -36,13 +35,15 @@
                     {{/if}}
                 {{/each}}
                 </div>
-                <form>   
-                    <small>Keep messages concise</small>    
+                <form class="msgForm">   
+                    <small>Keep messages concise (max 100 chars)</small>    
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder = "Write your message here..." id="inputmessage">
-                            <button type="submit" class="btn btn-info btn-lg" name="postmessage">POST</button>
+                            <button class="btn btn-warning btn-lg" id="clrMsg">X</button>
+                            <textarea rows="4" cols="40" maxlength="100" placeholder = "Write your message here..." id="inputMsg"></textarea>
+                            <button class="btn btn-success btn-lg" id="sendMsg">✓</button>
                         </div>
                 </form>     
+                {{>initiatorOne}}
     		</div>
         </div>
     </div>
