--- a/client/views/layouts/guided_text/guided_text.html
+++ b/client/views/layouts/guided_text/guided_text.html
@@ -1,5 +1,12 @@
 <template name="initiatorOne">
-      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt" value="Intruders in my house!">Intruders in my house!</button></div>
-      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt" value="Intruders in my yard!">Intruders in my yard!</button></div>
-      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt" value="Suspects outside my yard!">Suspects outside my yard!</button></div>
+      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt">INTRUDERS IN HOUSE!</button></div>
+      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt">INTRUDERS IN YARD!</button></div>
+      <div class="container-fluid"><button type="button" class="btn btn-danger btnGuideTxt">SUSPECTS OUTSIDE MY YARD!</button></div>
+</template>
+
+<template name="responderOne">
+      <div class="container-fluid"><button type="button" class="btn btn-info btnGuideTxt">GIVE MORE INFO!</button></div>
+      <div class="container-fluid"><button type="button" class="btn btn-info btnGuideTxt">I'M ON MY WAY!</button></div>
+      <div class="container-fluid"><button type="button" class="btn btn-info btnGuideTxt">I WILL PHONE BEAGLE WATCH!</button></div>
+        <div class="container-fluid"><button type="button" class="btn btn-info btnGuideTxt">I WILL PHONE THE POLICE!</button></div>
 </template>
