--- a/client/views/layouts/guided_text/guided_text.css
+++ b/client/views/layouts/guided_text/guided_text.css
@@ -2,7 +2,8 @@
     display: block;
     width: 100%;
     height: 60px;
-    font-size: 30px;
+    font-size: 25px;
     line-height: 25px;
     margin-bottom: 1px;
+    font-weight: bold;
 }
