--- a/client/views/layouts/help_chat_main/help_chat_main.css
+++ b/client/views/layouts/help_chat_main/help_chat_main.css
@@ -3,9 +3,12 @@ body{
     position: relative;
     bottom: 0;
 }
-
+.chatHeader {
+    padding: -1px;
+    margin: -1px;
+}
 #inputMsg {
-    margin-top: 1px;
+    margin: 1px;
     width: 70%;   
     font-size: 20px;
 }
@@ -43,8 +46,16 @@ body{
   margin: 0;
   padding: 0 10px 10px;
   max-height:300px;
-  height: 250px;
+  height: 190px;
   overflow-x:hidden;
+}
+.msg_container_base_class{
+  background: RED;
+  margin: 0;
+  padding: 0 10px 10px;
+  max-height:300px;
+  height: 190px;
+  overflow-x:hidden; 
 }
 .top-bar {
   text-align: center;
@@ -53,7 +64,7 @@ body{
   padding: 1px;
   position: relative;
   overflow: hidden;
-  height: 50px;
+  height: 75px;
 }
 .msg_initiator{
     padding-left: 5px !important;
