--- a/client/views/layouts/help_chat_main/help_chat_main.html
+++ b/client/views/layouts/help_chat_main/help_chat_main.html
@@ -1,20 +1,23 @@
 <template name='help_chat_main'>    
 <div class="container container-fluid">
-    <div class="row chat-window col-xs-5 col-md-3" id="chat_window_1" style="margin-left:0px;">
+    <div class="row chat-window col-xs-5 col-md-3" style="margin-left:0px;">
         <div class="col-xs-12 col-md-12">
         	<div class="panel panel-default">
                 <div class="panel-heading top-bar">
-                    <div class="col-md-8 col-xs-8">    
-                        <h1>CHAT #{{postID}}</h1>
+                    <div class="col-md-8 col-xs-8"> 
+                        <div class="chatHeader">{{serverTime}} ***{{chatBgColor}}</div>
+                        <h4 class="chatHeader" id="chatPostID">CHAT #{{postID}}</h4>
+                        <div class="chatHeader" id ="initialTimeAgo">{{initialTimeAgo}}</div>
+                        <div class="chatHeader" id="lastPostTimeAgo">{{lastPostTimeAgo}}</div>
                     </div>
                     <div class="col-md-4 col-xs-4" style="text-align: right;">
                         <a href="#"><span id="minim_chat_window" class="glyphicon glyphicon-minus icon_minim"></span></a>
                         <a href="#"><span class="glyphicon glyphicon-remove icon_close" data-id="chat_window_1"></span></a>
                     </div>
                 </div>
-                <div class="panel-body msg_container_base">
+                <div class="panel-body msg_container_base" style="background-color:'';" id="chat_window_1">
                 {{#each posts}}
-                    {{#if initiatorPost}}    
+                    {{#if isInitiatorPost}}    
                         <div class="row msg_container base_initiator">
                             <div class="col-md-10 col-xs-10">
                                 <div class="messageBubbleLeft msg_initiator">
@@ -35,15 +38,22 @@
                     {{/if}}
                 {{/each}}
                 </div>
+                <div style="text-align:center">
                 <form class="msgForm">   
                     <small>Keep messages concise (max 100 chars)</small>    
                         <div class="form-group">
-                            <button class="btn btn-warning btn-lg" id="clrMsg">X</button>
+                            <button class="btn btn-warning" id="clrMsg">X</button>
                             <textarea rows="4" cols="40" maxlength="100" placeholder = "Write your message here..." id="inputMsg"></textarea>
-                            <button class="btn btn-success btn-lg" id="sendMsg">✓</button>
+                            <button class="btn btn-success" id="sendMsg">^</button>
                         </div>
-                </form>     
-                {{>initiatorOne}}
+                    <small>Guided Text (Autoload)</small> 
+                </form>  
+                </div>
+                {{#if isInitiator}}
+                    {{>initiatorOne}}
+                {{else}}
+                    {{>responderOne}}
+                {{/if}}
     		</div>
         </div>
     </div>
