--- a/client/views/layouts/master_layout/master_layout.css
+++ b/client/views/layouts/master_layout/master_layout.css
@@ -4,6 +4,9 @@
 .navbar{
     margin-bottom: 1px;
 }
+.resfreshBtn{
+    margin: 1px;
+}
 .btnNav {
   width: 22%;
   border-color:blue;border-width:1px;border-style:solid;
