Resident interface for admin added

--- a/client/views/layouts/alert_buttons/alert_buttons.html
+++ b/client/views/layouts/alert_buttons/alert_buttons.html
@@ -12,6 +12,9 @@
         <h3><a href="/users_profile">USERS PROFILE.</a></h3>
     </div>
     <div>
+        <h3><a href="/admin_users_create">ADMIN USERS PROFILE.</a></h3>
+    </div>
+    <div>
         <a href="AppUse">How to use this app.</a>
     </div>
 <div id="footer">
