--- a/client/views/layouts/chat_old_list/chat_old_list.html
+++ b/client/views/layouts/chat_old_list/chat_old_list.html
@@ -4,7 +4,7 @@
     <div id={{_id}} class = "chatsOld" >
         <a href="/help_chat_main">
             <div class="chatNoOld">CHAT #{{_id}}</div>
-            <div>Initiator: <div class="inlineOld infoOld">{{initiatorName}}</div></div>
+            <div>Initiator: <div class="inlineOld infoOld">{{initiatorName}} {{initiatorSurname}}</div></div>
             <div>From: <div class="inlineOld infoOld">{{streetAddr}}</div></div>
             <div>Time: <div class="inlineOld infoOld">{{dispCreatedDate}}</div></div>
             <div>No of Posts: <div class="inlineOld infoOld">{{chatPostsCnt}}</div></div>
